# sparql_mcp

./: .env.example  Makefile  README.md  prompt.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml
docs/: production_readiness.md
docs-site/: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/docs/adr/: 0001-query-plan-ir-not-raw-sparql.md  0002-deterministic-validator-and-renderer.md  0003-raw-sparql-disabled-by-default.md  0004-docusaurus-documentation-site.md
docs-site/docs/developers/: architecture.md  ci.md  docs-maintenance.md  endpoints.md  evals.md  extension-guide.md  mcp-integration.md  production-readiness.md  query-plan-ir.md  release-process.md  renderer.md  repository-structure.md  schema-provider.md  term-resolution.md  testing.md  validator.md
docs-site/docs/reference/: configuration-reference.md  eval-metrics.md  prompts-reference.md  query-plan-schema.md  resources-reference.md  security-policy.md  tools-reference.md  validation-errors.md
docs-site/docs/users/: configuration.md  connecting-clients.md  faq.md  installation.md  intro.md  mcp-resources.md  mcp-tools.md  query-plan-basics.md  quickstart.md  raw-sparql-mode.md  running-the-server.md  schema-discovery.md  security-and-deployment.md  troubleshooting.md
docs-site/src/css/: custom.css
docs-site/src/pages/: index.tsx
docs-site/static/schema/: query-plan.schema.json
evals/: __init__.py  agent.py  golden_cases.yaml  golden_cases_adversarial.yaml  mention_extractor.py  metrics.py  models.py  planner_examples.yaml  planner_prompt.py  relation_hints.py  runner.py  sample_dataset.trig  sample_graph.ttl  structural.py
evals_rag/: README.md  __init__.py  config.py  fixtures.py  metrics.py  models.py  ocean_golden_cases.yaml  planner.py  prompts.py  report.py  reranking.py  retrieval.py  runner.py
scripts/: check_docs.py  generate_docs_reference.py  run_llm_eval_gate.py  run_ocean_fuseki_smoke.py  run_ocean_rag_smoke.py  run_rag_eval_gate.py  run_rag_question_smoke.py
src/graph_mcp/: __init__.py  concept_retrieval.py  config.py  logging.py  server.py
src/graph_mcp/compiler/: __init__.py  errors.py  escaping.py  renderer.py  validator.py
src/graph_mcp/graph/: __init__.py  endpoint.py  result_normalizer.py  schema_discovery.py  term_resolver.py
src/graph_mcp/mcp_tools/: __init__.py  prompts.py  resources.py  sparql_scanner.py  tools.py
src/graph_mcp/models/: __init__.py  _ir.py  expressions.py  iri.py  literals.py  patterns.py  query_plan.py  results.py  validation.py
src/graph_mcp/security/: __init__.py  policy.py
tests/: conftest.py  test_aggregate_validation.py  test_default_prefix_protection.py  test_eval_false_negatives.py  test_eval_metrics.py  test_eval_structural.py  test_evals.py  test_exists_validation.py  test_graph_allowlist.py  test_graph_allowlist_strict.py  test_import_robustness.py  test_imports.py  test_local_endpoint.py  test_mcp_concept_tool.py  test_mcp_prompt.py  test_mcp_tools.py  test_mention_extractor.py  test_models.py  test_planner_prompt.py  test_planner_status_model.py  test_planner_term_resolution.py  test_planner_workflow.py  test_prefix_handling.py  test_property_path_validation.py  test_query_graph_limits.py  test_raw_sparql_hardening.py  test_recursive_limits.py  test_remote_construct.py  test_renderer.py  test_runner_semantics.py  test_runner_wiring.py  test_schema_discovery.py  test_schema_provider_modes.py  test_security_policy.py  test_select_star_projection.py  test_sparql_scanner.py  test_term_resolver.py  test_validator.py
tests/evals_rag/: test_config.py  test_dedupe.py  test_embedding.py  test_graph_source.py  test_metrics.py  test_metrics_strong.py  test_models.py  test_ocean_fuseki_integration.py  test_planner.py  test_promotion.py  test_prompt_contract.py  test_reranker_context.py  test_reranking.py  test_retrieval.py  test_runner.py  test_runner_gates.py  test_runtime_hardening.py  test_vectorizer_retriever.py
tests/fixtures/: sample_graph.ttl
