[project]
name = "graph-mcp"
version = "0.1.0"
description = "Production MCP server for SPARQL query planning, validation, rendering, and execution via a strict QueryPlan IR."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "graph-mcp authors" }]
keywords = ["mcp", "sparql", "rdf", "llm", "query-plan"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "rdflib>=7.0",
    "structlog>=24.1",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ai = [
    "pydantic-ai>=0.0.13",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
graph-mcp = "graph_mcp.server:main"
graph-mcp-evals = "evals.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graph_mcp", "evals"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RET", "RUF",
]
ignore = [
    "B008",  # function call in default argument (FastAPI/Typer pattern)
    "RUF012", # mutable class attributes
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["rdflib.*", "pydantic_ai.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "llm: tests that require an LLM API key (skipped by default)",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
