[project]
name = "graph-mcp"
version = "0.1.0"
description = "Production MCP server for SPARQL query planning, validation, rendering, and execution via a strict QueryPlan IR."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "graph-mcp authors" }]
keywords = ["mcp", "sparql", "rdf", "llm", "query-plan"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    # Pydantic 2.6+ is required for the recursive IR forward-ref handling.
    # We exclude 3.0+ since the API may change; bump after verifying.
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "rdflib>=7.0",
    "structlog>=24.1",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ai = [
    "pydantic-ai>=0.0.13",
]
rag = [
    "qdrant-client>=1.9,<2",
    # The ontology vectorizer is the single source of truth for ontology
    # concept retrieval. We consume it only through its public
    # ``ontology_vectorizer`` facade — never through internal modules.
    "ontology-vectorizer>=0.1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
graph-mcp = "graph_mcp.server:main"
graph-mcp-evals = "evals.runner:main"
graph-mcp-rag-evals = "evals_rag.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graph_mcp", "evals", "evals_rag"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RET", "RUF",
]
ignore = [
    "B008",  # function call in default argument (FastAPI/Typer pattern)
    "RUF012", # mutable class attributes
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["rdflib.*", "pydantic_ai.*", "qdrant_client.*"]
ignore_missing_imports = true

# The vectorizer's published types use tight invariant unions in places that
# are correct at runtime but trip strict mypy. We treat it as an opaque
# library boundary; its own test suite enforces correctness internally.
[[tool.mypy.overrides]]
module = ["ontology_vectorizer", "ontology_vectorizer.*"]
ignore_missing_imports = true

# uv development convenience: an editable, side-by-side checkout of the
# vectorizer satisfies the ``ontology-vectorizer`` dependency without
# requiring a published artifact. ``uv pip install -e ../ontology_vectorizer``
# also works and is what the Makefile recommends for non-uv users.
[tool.uv.sources]
ontology-vectorizer = { path = "../ontology_vectorizer", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "llm: tests that require an LLM API key (skipped by default)",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
